# mini-yt-mcp

./: .gitignore  README.md  dance_example.py  example_usage.py  main.py  pyproject.toml
.github/workflows/: ci.yml
mini_yt_mcp/: __init__.py  audio_analyzer.py  csv_move.py  downloader.py  main.py  server.py
tests/: test_basic.py
