[project]
name = "mini-yt-mcp"
version = "0.1.0"
description = "Minimal YouTube MCP - Download YouTube videos and generate dance moves from audio analysis"
dependencies = [
    "yt-dlp>=2023.12.30",
    "opencv-python>=4.8.1",
    "numpy>=1.26.0",
    "Pillow>=10.1.0",
    "mediapipe>=0.10.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "scipy>=1.11.0",
    "librosa>=0.10.0",
    "mcp>=1.0.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Mini YT MCP Team"},
]
keywords = ["youtube", "audio", "dance", "robot", "mcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.scripts]
mini-yt-mcp = "mini_yt_mcp.main:main"
mini-yt-mcp-server = "mini_yt_mcp.server:main"

[project.urls]
Homepage = "https://github.com/haixuanTao/mini-yt-mcp"
Repository = "https://github.com/haixuanTao/mini-yt-mcp.git"
Issues = "https://github.com/haixuanTao/mini-yt-mcp/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"